kubernetes/k8s/14-ingress-oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studyscrum-oauth-ingress
  namespace: studyscrum
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8081
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 8081
